aprendaParser.py
# Generated from aprenda.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class aprendaParser ( Parser ):

    grammarFileName = "aprenda.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "';'", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "'=='", "'!='", "'<'", "'>'", "'{'", 
                     "'}'", "','", "'si'", "'sino'", "'mientras'", "'imprimir'", 
                     "'funcion'" ]

    symbolicNames = [ "<INVALID>", "LPAREN", "RPAREN", "SEMICOLON", "EQUAL", 
                      "PLUS", "MINUS", "MUL", "DIV", "EQ", "NEQ", "LT", 
                      "GT", "LBRACE", "RBRACE", "COMMA", "IF", "ELSE", "WHILE", 
                      "PRINT", "FUNCION", "ID", "NUMBER", "STRING", "WS", 
                      "COMMENT", "LINE_COMMENT" ]

    RULE_programa = 0
    RULE_instruccion = 1
    RULE_imprimir = 2
    RULE_asignacion = 3
    RULE_condicional = 4
    RULE_bucle = 5
    RULE_funcion = 6
    RULE_llamada_funcion = 7
    RULE_bloque = 8
    RULE_expr = 9

    ruleNames =  [ "programa", "instruccion", "imprimir", "asignacion", 
                   "condicional", "bucle", "funcion", "llamada_funcion", 
                   "bloque", "expr" ]

    EOF = Token.EOF
    LPAREN=1
    RPAREN=2
    SEMICOLON=3
    EQUAL=4
    PLUS=5
    MINUS=6
    MUL=7
    DIV=8
    EQ=9
    NEQ=10
    LT=11
    GT=12
    LBRACE=13
    RBRACE=14
    COMMA=15
    IF=16
    ELSE=17
    WHILE=18
    PRINT=19
    FUNCION=20
    ID=21
    NUMBER=22
    STRING=23
    WS=24
    COMMENT=25
    LINE_COMMENT=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aprendaParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(aprendaParser.InstruccionContext,i)


        def getRuleIndex(self):
            return aprendaParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = aprendaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.instruccion()
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 3997696) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def imprimir(self):
            return self.getTypedRuleContext(aprendaParser.ImprimirContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(aprendaParser.AsignacionContext,0)


        def condicional(self):
            return self.getTypedRuleContext(aprendaParser.CondicionalContext,0)


        def bucle(self):
            return self.getTypedRuleContext(aprendaParser.BucleContext,0)


        def funcion(self):
            return self.getTypedRuleContext(aprendaParser.FuncionContext,0)


        def llamada_funcion(self):
            return self.getTypedRuleContext(aprendaParser.Llamada_funcionContext,0)


        def getRuleIndex(self):
            return aprendaParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)




    def instruccion(self):

        localctx = aprendaParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instruccion)
        try:
            self.state = 31
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 25
                self.imprimir()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.asignacion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 27
                self.condicional()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 28
                self.bucle()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 29
                self.funcion()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 30
                self.llamada_funcion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImprimirContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(aprendaParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(aprendaParser.LPAREN, 0)

        def STRING(self):
            return self.getToken(aprendaParser.STRING, 0)

        def RPAREN(self):
            return self.getToken(aprendaParser.RPAREN, 0)

        def SEMICOLON(self):
            return self.getToken(aprendaParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return aprendaParser.RULE_imprimir

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImprimir" ):
                listener.enterImprimir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImprimir" ):
                listener.exitImprimir(self)




    def imprimir(self):

        localctx = aprendaParser.ImprimirContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_imprimir)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(aprendaParser.PRINT)
            self.state = 34
            self.match(aprendaParser.LPAREN)
            self.state = 35
            self.match(aprendaParser.STRING)
            self.state = 36
            self.match(aprendaParser.RPAREN)
            self.state = 37
            self.match(aprendaParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(aprendaParser.ID, 0)

        def EQUAL(self):
            return self.getToken(aprendaParser.EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(aprendaParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(aprendaParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return aprendaParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = aprendaParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(aprendaParser.ID)
            self.state = 40
            self.match(aprendaParser.EQUAL)
            self.state = 41
            self.expr(0)
            self.state = 42
            self.match(aprendaParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(aprendaParser.IF, 0)

        def LPAREN(self):
            return self.getToken(aprendaParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(aprendaParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(aprendaParser.RPAREN, 0)

        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aprendaParser.BloqueContext)
            else:
                return self.getTypedRuleContext(aprendaParser.BloqueContext,i)


        def ELSE(self):
            return self.getToken(aprendaParser.ELSE, 0)

        def getRuleIndex(self):
            return aprendaParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)




    def condicional(self):

        localctx = aprendaParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(aprendaParser.IF)
            self.state = 45
            self.match(aprendaParser.LPAREN)
            self.state = 46
            self.expr(0)
            self.state = 47
            self.match(aprendaParser.RPAREN)
            self.state = 48
            self.bloque()
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 49
                self.match(aprendaParser.ELSE)
                self.state = 50
                self.bloque()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BucleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(aprendaParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(aprendaParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(aprendaParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(aprendaParser.RPAREN, 0)

        def bloque(self):
            return self.getTypedRuleContext(aprendaParser.BloqueContext,0)


        def getRuleIndex(self):
            return aprendaParser.RULE_bucle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBucle" ):
                listener.enterBucle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBucle" ):
                listener.exitBucle(self)




    def bucle(self):

        localctx = aprendaParser.BucleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bucle)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(aprendaParser.WHILE)
            self.state = 54
            self.match(aprendaParser.LPAREN)
            self.state = 55
            self.expr(0)
            self.state = 56
            self.match(aprendaParser.RPAREN)
            self.state = 57
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCION(self):
            return self.getToken(aprendaParser.FUNCION, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(aprendaParser.ID)
            else:
                return self.getToken(aprendaParser.ID, i)

        def LPAREN(self):
            return self.getToken(aprendaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(aprendaParser.RPAREN, 0)

        def bloque(self):
            return self.getTypedRuleContext(aprendaParser.BloqueContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(aprendaParser.COMMA)
            else:
                return self.getToken(aprendaParser.COMMA, i)

        def getRuleIndex(self):
            return aprendaParser.RULE_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncion" ):
                listener.enterFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncion" ):
                listener.exitFuncion(self)




    def funcion(self):

        localctx = aprendaParser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(aprendaParser.FUNCION)
            self.state = 60
            self.match(aprendaParser.ID)
            self.state = 61
            self.match(aprendaParser.LPAREN)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 62
                self.match(aprendaParser.ID)
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 63
                    self.match(aprendaParser.COMMA)
                    self.state = 64
                    self.match(aprendaParser.ID)
                    self.state = 69
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 72
            self.match(aprendaParser.RPAREN)
            self.state = 73
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Llamada_funcionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(aprendaParser.ID, 0)

        def LPAREN(self):
            return self.getToken(aprendaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(aprendaParser.RPAREN, 0)

        def SEMICOLON(self):
            return self.getToken(aprendaParser.SEMICOLON, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aprendaParser.ExprContext)
            else:
                return self.getTypedRuleContext(aprendaParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(aprendaParser.COMMA)
            else:
                return self.getToken(aprendaParser.COMMA, i)

        def getRuleIndex(self):
            return aprendaParser.RULE_llamada_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLlamada_funcion" ):
                listener.enterLlamada_funcion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLlamada_funcion" ):
                listener.exitLlamada_funcion(self)




    def llamada_funcion(self):

        localctx = aprendaParser.Llamada_funcionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_llamada_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(aprendaParser.ID)
            self.state = 76
            self.match(aprendaParser.LPAREN)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 6291522) != 0):
                self.state = 77
                self.expr(0)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==15:
                    self.state = 78
                    self.match(aprendaParser.COMMA)
                    self.state = 79
                    self.expr(0)
                    self.state = 84
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 87
            self.match(aprendaParser.RPAREN)
            self.state = 88
            self.match(aprendaParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(aprendaParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(aprendaParser.RBRACE, 0)

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aprendaParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(aprendaParser.InstruccionContext,i)


        def getRuleIndex(self):
            return aprendaParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)




    def bloque(self):

        localctx = aprendaParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(aprendaParser.LBRACE)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3997696) != 0):
                self.state = 91
                self.instruccion()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(aprendaParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(aprendaParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aprendaParser.ExprContext)
            else:
                return self.getTypedRuleContext(aprendaParser.ExprContext,i)


        def RPAREN(self):
            return self.getToken(aprendaParser.RPAREN, 0)

        def MINUS(self):
            return self.getToken(aprendaParser.MINUS, 0)

        def ID(self):
            return self.getToken(aprendaParser.ID, 0)

        def NUMBER(self):
            return self.getToken(aprendaParser.NUMBER, 0)

        def llamada_funcion(self):
            return self.getTypedRuleContext(aprendaParser.Llamada_funcionContext,0)


        def PLUS(self):
            return self.getToken(aprendaParser.PLUS, 0)

        def MUL(self):
            return self.getToken(aprendaParser.MUL, 0)

        def DIV(self):
            return self.getToken(aprendaParser.DIV, 0)

        def EQ(self):
            return self.getToken(aprendaParser.EQ, 0)

        def NEQ(self):
            return self.getToken(aprendaParser.NEQ, 0)

        def LT(self):
            return self.getToken(aprendaParser.LT, 0)

        def GT(self):
            return self.getToken(aprendaParser.GT, 0)

        def getRuleIndex(self):
            return aprendaParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = aprendaParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 100
                self.match(aprendaParser.LPAREN)
                self.state = 101
                self.expr(0)
                self.state = 102
                self.match(aprendaParser.RPAREN)
                pass

            elif la_ == 2:
                self.state = 104
                self.match(aprendaParser.MINUS)
                self.state = 105
                self.expr(4)
                pass

            elif la_ == 3:
                self.state = 106
                self.match(aprendaParser.ID)
                pass

            elif la_ == 4:
                self.state = 107
                self.match(aprendaParser.NUMBER)
                pass

            elif la_ == 5:
                self.state = 108
                self.llamada_funcion()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 119
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 117
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = aprendaParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 111
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 112
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 480) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 113
                        self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = aprendaParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 114
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 115
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7680) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 116
                        self.expr(7)
                        pass

             
                self.state = 121
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[9] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 6)
         




